[package]
name = "streamstore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
arc-swap = "1.7.1"
backtrace = "0.3.75"
crc = "3.3.0"
defer = "0.2.1"
env_logger = "0.11.8"
filename = "0.1.1"
log = "0.4.27"
memmap2 = "0.9.5"
rand = "0.9.1"
thiserror = "2.0.12"

